HYDRAN-426: Add resource to check letter statuses
